<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_track">

    <fragment
        android:id="@+id/navigation_track"
        android:name="com.bilab.lunsenluandroid.ui.track.TrackFragment"
        android:label="@string/path"
        tools:layout="@layout/fragment_track" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.bilab.lunsenluandroid.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.bilab.lunsenluandroid.ui.setting.SettingFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_setting" />
</navigation>