<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:background="@color/main">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:gravity="center"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:text="@string/path"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:gravity="center"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/track_choose"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/choose"
                android:textColor="@color/white"
                android:gravity="center"
                android:textStyle="bold"/>

        </TableRow>
        <TableRow
            android:id="@+id/fragment_path_error"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:visibility="gone"
            android:background="@color/gray"
            >
            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/path_error"
                android:textSize="10sp"
                android:textColor="@color/red"
                />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="18">
            <WebView
                android:id="@+id/fragment_path_webView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>