<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:minHeight="60dp"
            android:background="@color/main">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/setting"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:gravity="center"
                android:textStyle="bold"/>
        </TableRow>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@color/gray">
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/notebook"
                        android:scaleType="centerInside"
                        android:scaleX="0.6"
                        android:scaleY="0.6"
                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="8"
                        android:text="@string/health_passport"
                        android:gravity="center|left"
                        android:textSize="18sp"/>


                </LinearLayout>
                <LinearLayout
                    android:id="@+id/setting_health_passport"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:background="@xml/background_selector"
                    >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"/>

                    <TextView
                        android:id="@+id/asd"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="8"
                        android:gravity="center|left"
                        android:text="@string/health_passport"
                        android:textSize="16sp" />


                    <ImageView
                        android:id="@+id/setting_health_passport_right"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/right"
                        android:scaleX="0.75"
                        android:scaleY="0.75"
                        android:scaleType="centerInside"
                        android:visibility="visible"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_weight="12"
                    android:background="@color/gray" />
                <LinearLayout
                    android:id="@+id/setting_doctor_auth"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:background="@xml/background_selector">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="8"
                        android:text="@string/doctor_auth"
                        android:gravity="center|left"
                        android:textSize="16sp"/>
                    <ImageView

                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/right"
                        android:scaleX="0.75"
                        android:scaleY="0.75"
                        android:scaleType="centerInside"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@color/gray">
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/settings_2"
                        android:scaleType="centerInside"
                        android:scaleX="0.6"
                        android:scaleY="0.6"
                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="8"
                        android:text="@string/normal_setting"
                        android:gravity="center|left"
                        android:textSize="18sp"/>

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/setting_info"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:background="@xml/background_selector">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="8"
                        android:text="@string/news"
                        android:gravity="center|left"
                        android:textSize="16sp"/>

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/right"
                        android:scaleX="0.75"
                        android:scaleY="0.75"
                        android:scaleType="centerInside"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_weight="12"
                    android:background="@color/gray" />
                <LinearLayout
                    android:id="@+id/setting_account"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:background="@xml/background_selector">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="8"
                        android:gravity="center|left"
                        android:text="@string/account"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/right"
                        android:scaleX="0.75"
                        android:scaleY="0.75"
                        android:scaleType="centerInside"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@color/gray">
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/more"
                        android:scaleType="centerInside"
                        android:scaleX="0.6"
                        android:scaleY="0.6"
                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="8"
                        android:text="@string/another"
                        android:gravity="center|left"
                        android:textSize="18sp"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/setting_private_policy"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:background="@xml/background_selector">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="8"
                        android:text="@string/privacy_policy"
                        android:gravity="center|left"
                        android:textSize="15sp"/>
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/right"
                        android:scaleX="0.75"
                        android:scaleY="0.75"
                        android:scaleType="centerInside"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_weight="12"
                    android:background="@color/gray" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:background="@color/white">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="7"
                        android:text="@string/version"
                        android:gravity="center|left"
                        android:textSize="16sp"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:text="1.0.1"
                        android:gravity="center"
                        android:textSize="16sp"
                        />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_weight="12"
                    android:background="@color/gray" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@color/white"
                    />

                <TextView
                    android:id="@+id/setting_log_out"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center|bottom"
                    android:text="@string/log_out"
                    android:textColor="@color/red"
                    android:textSize="25sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:background="@color/white"
                    />
            </LinearLayout>
        </ScrollView>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>