<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrivacyPolicyActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:minHeight="60dp"
            android:background="@color/main">

            <ImageView
                android:id="@+id/privacy_policy_previous"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:src="@drawable/arrow_white"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:scaleType="centerInside"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.2"
                android:text="@string/privacy_policy"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:gravity="center"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"/>
        </TableRow>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ScrollView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingTop="20dp"
                    >
                    <TextView
                        android:id="@+id/doctor_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="visible"
                        android:text="@string/privacy_policy_detail"
                        android:textSize="14sp">

                    </TextView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="170dp"
                        />
                </LinearLayout>
            </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:minHeight="50dp"
                android:layout_marginBottom="120dp"
                android:layout_gravity="bottom|end">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    />

                <Button
                    android:id="@+id/privacy_policy_agree"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:background="@drawable/bg_round_button"
                    android:contentDescription="Round Button"
                    android:text="@string/agree"
                    android:textColor="#ffffff"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"

                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:minHeight="50dp"
                android:layout_marginBottom="50dp"
                android:layout_gravity="bottom|end">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    />

                <Button
                    android:id="@+id/privacy_policy_disagree"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:background="@drawable/bg_round_button_2"
                    android:contentDescription="Round Button"
                    android:text="@string/disagree"
                    android:textColor="#ffffff"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"

                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    />

            </LinearLayout>
        </FrameLayout>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>